# one_server

./: .gitignore  Cargo.toml  build.ps1
asset/: cfg.json  filemonitor_menu_template.json  launch.bat  mkspecialpath.ps1
asset/f_monitor_test/: 1.txt
crossterm_ui/: Cargo.toml
crossterm_ui/src/: component.rs  lib.rs  main.rs  menu_lib.rs  tools.rs
one/: Cargo.toml
one/src/: main.rs
src/: app.rs  apps.rs  cli.rs  file_monitor.rs  lib.rs  main.rs  menu.rs  my_widgets.rs  param.rs
src/apps/: file_monitor.rs  file_sync_manager.rs
src/apps/file_monitor/: maintainer.rs  monitor.rs
src/apps/file_sync_manager/: dir_scanner.rs  log_observer.rs  menujson.rs  registry.rs
src/my_widgets/: menu.rs  mod.rs  wrap_list.rs
src/my_widgets/menu/: menu_render.rs  menu_state.rs  mod.rs
tui_components/: Cargo.toml
