[package]
name = "one_server"
version = "0.1.0"
edition = "2024"

[dependencies]
smol = "2.0.2"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
chrono ="0.4.40"
notify = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"