[package]
name = "one_server"
version = "0.1.0"
edition = "2024"

[dependencies]
smol = "2.0.2"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
chrono = "0.4.41"
notify = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = { version = "0.16.2", features = ["hyphenation"] }
hyphenation = "0.8.4"
futures = "0.3.28"
mysql_async = "0.36.1"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = true
panic = "abort"
